# Shadertoy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  main.cpp
shaders/: BallOfFire.shader  Clouds.shader  abandoned_construction.shader  marching.shader  minecraft.shader
src/: Constants.h  ShaderInput.cpp  ShaderInput.h  ShaderToy.cpp  ShaderToy.h  main.cpp
src/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h
